--- a/references.bib
+++ b/references.bib
@@ -12,6 +12,17 @@
   publisher	= {Now Publishers, Inc.}
 }
 
+@article{ruiz2021,
+  title={Unifying functional user interface design principles},
+  author={Ruiz, Jenny and Serral, Estefan{\'\i}a and Snoeck, Monique},
+  journal={International Journal of Human--Computer Interaction},
+  volume={37},
+  number={1},
+  pages={47--67},
+  year={2021},
+  publisher={Taylor \& Francis}
+}
+
 @Article{	  abbate1999,
   author	= {Abbate, J.},
   title		= {{Getting small: a short history of the personal
@@ -780,6 +791,24 @@
   pages		= {29--53},
   year		= {1997},
   publisher	= {Springer}
+}
+
+@article{slingsby2009,
+  title={Configuring hierarchical layouts to address research questions},
+  author={Slingsby, Aidan and Dykes, Jason and Wood, Jo},
+  journal={IEEE transactions on visualization and computer graphics},
+  volume={15},
+  number={6},
+  pages={977--984},
+  year={2009},
+  publisher={IEEE}
+}
+
+@article{wu2022,
+  title={Extending the View Composition Algebra to Hierarchical Data},
+  author={Wu, Eugene},
+  journal={arXiv preprint arXiv:2205.01283},
+  year={2022}
 }
 
 @Misc{		  gross2024,
